reprise du code et début de travail sur ACM2

--- a/2.3_ACM.Rmd
+++ b/2.3_ACM.Rmd
@@ -12,7 +12,7 @@ output:
 
 ```{r setup, include=FALSE ,echo=FALSE, cache=F, plotly=T}
 
-load("data/jeunesse/ACM.RData")
+load("data/jeunesse/ACM_pano.RData")
 
 # Option de chunk
 knitr::opts_chunk$set(
