--- a/0_about.Rmd
+++ b/0_about.Rmd
@@ -35,6 +35,10 @@ source("librairies.R")
 
 #rmarkdown::render_site(encoding = 'UTF-8')
 
+#gitlabr::use_gitlab_ci(type = "bookdown")
+#usethis::use_github_action()
+
+
 use_providers(get_providers())
 
 depbfc <- c('21','25','39','58','70','71','89','90')
