--- a/5.5_RES.Rmd
+++ b/5.5_RES.Rmd
@@ -125,7 +125,10 @@ leaflet(res) %>%
                        chartdata = res@data %>% select("bassins":"autres"),
                        colorPalette = coul,
                        width = sqrt(x*res$equ) ,  #paramètre d'échelle des charts
-                       opacity = 0.6) %>% syncWith("minicharts") %>%
+                       opacity = 0.6
+                #,group="minicharts"   #ne fonctionne pas
+                ) %>% 
+  syncWith("minicharts") %>%
     contour_bfc() %>%
   addLayersControl( baseGroups = c("taux équi/10 000 hab","taux structurant/50 000hab",
                                    "taux grands jeux/50 000hab","taux proxi/50 000hab", 
@@ -182,7 +185,6 @@ equip %>%
   cc_kable("rcrrrrrrrrl") %>%
   column_spec(3, bold=T) %>%
   add_header_above(c(" "=3,"structurant"=2,"tennis"=2,"terrains"=2, "natation"=1, " ")) %>%
-#  row_spec(nrow(region_tab),bold = T,color = "navy") %>%
   footnote(general = " MEDES recensement des équipements sportifs 2020", 
            general_title = "Source : ",
            number = c("structurant : salles de sport collectifs, gymnases et salles polyvalentes \n",
@@ -193,7 +195,7 @@ equip %>%
            footnote_as_chunk = T)
 ```
 
-### Taux d'équipements par habitants et répartition
+### Répartition
 
 La Bourgogne-Franche-Comté est la région française la mieux dotée en équipement. Cela est lié avec une densité faible.
 
@@ -220,7 +222,7 @@ hchart( equip %>%
   hc_add_theme(thm) 
 ```
 
-### Détail des équipements
+### Détail 
 
 ```{r}
 equip %>% 
@@ -272,7 +274,7 @@ La Haute-Saône est une des départements les mieux équipés de France. Le Doub
 
 ## Row {.tabset .tabset-fade .tabset-pills data-height="800"}
 
-### Comparaisons départementales
+### Comparaisons
 
 ```{r}
 equip %>% 
@@ -363,7 +365,7 @@ hchart( equip %>%
     hc_add_theme(thm) 
 ```
 
-### répartition par catégorie
+### Répartition 
 
 ```{r}
 hchart( equip %>% 
@@ -388,7 +390,7 @@ hchart( equip %>%
   hc_add_theme(thm) 
 ```
 
-### Détail des équipements
+### Détail
 
 ```{r}
 equip %>% 
@@ -474,18 +476,7 @@ leafRES()
 equip %>% 
   filter(!is.na(EPCI)) %>% 
   filter(EPCI %in% basecom$EPCI[basecom$REG=="27"]) %>%
-  group_by(EPCI) %>% 
-  summarise(equ=n(),
-            bassins=sum(EquipementTypeCode %in% 101:106),
-            gdsjeux=sum(EquipementCateg == "Terrains de grands jeux" ),
-            structurant=sum(EquipementCateg == "Salles de pratiques collectives" ),
-            gymnases=sum(EquipementTypeCode %in% c('1901','2201')),
-            tennis_couv=sum(EquipementCateg == "Courts de tennis" & 
-                              NatureLibelle %in% c('Extérieur couvert','Découvrable','Intérieur'),
-                            na.rm = T ),
-            tennis=sum(EquipementCateg == "Courts de tennis"),
-            proxi=sum (EquipementCateg == "Equipements Ext." & EquProximite== 1,
-                       na.rm = T) ) %>%
+  sum_res(EPCI) %>%
   left_join(.,pop_basecom(EPCI),
             by="EPCI") %>%
   #adorn_totals("row",name = "BFC") %>%
@@ -514,24 +505,13 @@ equip %>%
   scroll_box(height="780px")
 ```
 
-### Taux d'équipements pour 10 000 habitants
+### Taux d'équipements
 
 ```{r}
 equip %>% 
   filter(!is.na(EPCI)) %>% 
   filter(EPCI %in% basecom$EPCI[basecom$REG=="27"]) %>%
-  group_by(EPCI) %>% 
-  summarise(equ=n(),
-            bassins=sum(EquipementTypeCode %in% 101:106),
-            gdsjeux=sum(EquipementCateg == "Terrains de grands jeux" ),
-            structurant=sum(EquipementCateg == "Salles de pratiques collectives" ),
-            gymnases=sum(EquipementTypeCode %in% c('1901','2201')),
-            tennis_couv=sum(EquipementCateg == "Courts de tennis" & 
-                              NatureLibelle %in% c('Extérieur couvert','Découvrable','Intérieur'),
-                            na.rm = T ),
-            tennis=sum(EquipementCateg == "Courts de tennis"),
-            proxi=sum (EquipementCateg == "Equipements Ext." & EquProximite== 1,
-                       na.rm = T) ) %>%
+  sum_res(EPCI) %>%
   left_join(.,pop_basecom(EPCI),
             by="EPCI") %>%
   #adorn_totals("row",name = "BFC") %>%
@@ -569,6 +549,9 @@ equip %>%
            number = c("structurant : salles de sport collectifs \n",
                       "proximité : terrains en accès libre"), 
            footnote_as_chunk = T) %>%
+    footnote(general_title = "Taux d'équipements :",
+           general = "pour 10 000 habitants",
+           footnote_as_chunk = T)
   scroll_box(height="780px")
 ```
 
@@ -598,24 +581,10 @@ leafRES(x=10) %>% contour_depbfc()
 equip %>% 
   filter(!is.na(BV2012)) %>% 
   filter(BV2012 %in% basecom$BV2012[basecom$REG=="27"]) %>%
-  group_by(BV2012) %>% 
-  summarise(equ=n(),
-            bassins=sum(EquipementTypeCode %in% 101:106),
-            gdsjeux=sum(EquipementCateg == "Terrains de grands jeux" ),
-            structurant=sum(EquipementCateg == "Salles de pratiques collectives" ),
-            gymnases=sum(EquipementTypeCode %in% c('1901','2201')),
-            tennis_couv=sum(EquipementCateg == "Courts de tennis" & 
-                              NatureLibelle %in% c('Extérieur couvert','Découvrable','Intérieur'),
-                            na.rm = T ),
-            tennis=sum(EquipementCateg == "Courts de tennis"),
-            proxi=sum (EquipementCateg == "Equipements Ext." & EquProximite== 1,
-                       na.rm = T ) ) %>%
-  left_join(.,basecom %>% 
-              select(BV2012,pop) %>% 
-              group_by(BV2012) %>% 
-              summarise(pop=sum(pop,na.rm=T)),
+  sum_res(BV2012) %>%
+  left_join(.,pop_basecom(BV2012),
             by="BV2012") %>% 
-  arrange(desc(equ)) %>%
+   arrange(desc(equ)) %>%
   left_join(.,appartenance %>% 
               filter(NIVGEO=="BV2012") %>% 
               select(CODGEO,LIBGEO),
@@ -625,11 +594,8 @@ equip %>%
          `grands jeux`=gdsjeux, proximité=proxi,`tous bassins`= bassins) %>%
   arrange(desc(équipements)) %>%
   
-  kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
-       align="rcrrrrrrrrr", escape = F) %>% 
-  kable_styling("hover", full_width = F) %>%
-  column_spec(3, 
-              bold=T) %>%
+  cc_kable("rcrrrrrrrrr") %>%
+  column_spec(3, bold=T) %>%
   add_header_above(c(" "=3,"structurant"=2,"tennis"=2,"terrains"=2, "natation"=1)) %>%
   footnote(general = " MEDES recensement des équipements sportifs 2020", 
            general_title = "Source : ",
@@ -639,30 +605,15 @@ equip %>%
   scroll_box(height="780px")
 ```
 
-### Taux d'équipements pour 10 000 habitants
+### Taux d'équipements 
 
 ```{r}
 equip %>% 
   filter(!is.na(BV2012)) %>% 
   filter(BV2012 %in% basecom$BV2012[basecom$REG=="27"]) %>%
-  group_by(BV2012) %>% 
-  summarise(equ=n(),
-            bassins=sum(EquipementTypeCode %in% 101:106),
-            gdsjeux=sum(EquipementCateg == "Terrains de grands jeux" ),
-            structurant=sum(EquipementCateg == "Salles de pratiques collectives" ),
-            gymnases=sum(EquipementTypeCode %in% c('1901','2201')),
-            tennis_couv=sum(EquipementCateg == "Courts de tennis" & 
-                              NatureLibelle %in% c('Extérieur couvert','Découvrable','Intérieur') ,
-                            na.rm = T),
-            tennis=sum(EquipementCateg == "Courts de tennis"),
-            proxi=sum (EquipementCateg == "Equipements Ext." & EquProximite== 1,
-                       na.rm=T) ) %>%
-  left_join(.,basecom %>% 
-              select(BV2012,pop) %>% 
-              group_by(BV2012) %>% 
-              summarise(pop=sum(pop,na.rm=T)),
-            by="BV2012") %>%
-  #adorn_totals("row",name = "BFC") %>%
+  sum_res(BV2012) %>%
+  left_join(.,pop_basecom(BV2012),
+            by="BV2012") %>% 
   mutate(txequi=color_bar('lightblue')
         (digits(10000*equ/pop,1,decimal.mark=",") ) ,
         txbassins=color_tile('white','lightblue',alpha=0.5)
@@ -684,21 +635,23 @@ equip %>%
               select(CODGEO,LIBGEO),
             by=c("BV2012"="CODGEO") ) %>%
   select(BV2012,`bassin de vie`=LIBGEO,équipements=equ,
-         `taux d'équipements`=txequi,structurant=txstructurant,`dont gymnases`=txgymnases,
-         tennis=txtennis,`dont couverts`=txtennis_couv,`grands jeux`=txgdsjeux,`proximité`=txproxi,
+         `taux d'équipements`=txequi,
+         structurant=txstructurant,`dont gymnases`=txgymnases,
+         tennis=txtennis,`dont couverts`=txtennis_couv,
+         `grands jeux`=txgdsjeux,`proximité`=txproxi,
          `tous bassins`=txbassins) %>%
   arrange(desc(équipements)) %>%
   
-  kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
-       align="rcrllrlrllr", escape = F) %>% 
-  kable_styling("hover", full_width = F) %>%
-  column_spec(3, 
-              bold=T) %>%
+  cc_kable("rcrllrlrllr") %>%
+  column_spec(3, bold=T) %>%
   add_header_above(c(" "=4,"taux structurant"=2,"taux tennis"=2,"taux terrains"=2, "taux natation"=1)) %>%
   footnote(general = " MEDES recensement des équipements sportifs 2020", 
            general_title = "Source : ",
            number = c("structurant : salles de sport collectifs \n",
                       "proximité : terrains en accès libre"), 
+           footnote_as_chunk = T) %>%
+    footnote(general_title = "Taux d'équipements :",
+           general = "pour 10 000 habitants",
            footnote_as_chunk = T) %>%
   scroll_box(height="780px") 
 ```
